--- a/src/app/dashboard/light-widget/light-widget.component.html
+++ b/src/app/dashboard/light-widget/light-widget.component.html
@@ -2,16 +2,30 @@
   <mat-card-title>Lights</mat-card-title>
   <mat-card-content class="demo-basic-list">
     <mat-grid-list [cols]="1" gutterSize="10px" rowHeight="100px">
-      <mat-grid-tile [colspan]="1" [rowspan]="1" class="mat-elevation-z15">
-        <button>
-          <div class="lightheader">Led 1</div>
-        </button>
+      <mat-grid-tile [colspan]="1" [rowspan]="1" (click)="togglelight()">
+
+
+        <input [(colorPicker)]="color" [style.background]="color" [cpDialogDisplay]='popup'/>
         <mat-divider [vertical]="true"></mat-divider>
         
         <label>
           <input type="checkbox" class="toggle-checkbox">
           <div class="toggle-switch"></div>
         </label>
+        <mat-divider [vertical]="true"></mat-divider>
+        <div class="checkbox-wrapper-44">
+          <label class="toggleButton">
+            <input type="checkbox">
+            <div>
+              <svg viewBox="0 0 44 44">
+                <path transform="translate(-2.000000, -2.000000)" d="M14,24 L21,31 L39.7428882,11.5937758 C35.2809627,6.53125861 30.0333333,4 24,4 C12.95,4 4,12.95 4,24 C4,35.05 12.95,44 24,44 C35.05,44 44,35.05 44,24 C44,19.3 42.5809627,15.1645919 39.7428882,11.5937758"></path>
+              </svg>
+            </div>
+          </label>
+        </div>
+
+
+
       </mat-grid-tile>
       <mat-grid-tile [colspan]="1" [rowspan]="1" class="mat-elevation-z15">
       </mat-grid-tile>
