--- a/src/app/dashboard/cimate-widget/cimate-widget.component.html
+++ b/src/app/dashboard/cimate-widget/cimate-widget.component.html
@@ -4,16 +4,17 @@
     <mat-card-content class="demo-basic-list">
       <mat-grid-list [cols]="2" gutterSize="20px" rowHeight="150px">
         <mat-grid-tile [colspan]="1" [rowspan]="1"
-                       class="mat-elevation-z15">
+                       class="mat-elevation-z15" (click)="openClimateDialog()">
         </mat-grid-tile>
         <mat-grid-tile [colspan]="1" [rowspan]="1"
-                       class="mat-elevation-z15">
+                       class="mat-elevation-z15" (click)="openClimateDialog()">
         </mat-grid-tile>
         <mat-grid-tile [colspan]="1" [rowspan]="1"
-                       class="mat-elevation-z15">
+                       class="mat-elevation-z15" (click)="openClimateDialog()">
+                       
         </mat-grid-tile>
         <mat-grid-tile [colspan]="1" [rowspan]="1"
-                       class="mat-elevation-z15">
+                       class="mat-elevation-z15" (click)="openClimateDialog()">
         </mat-grid-tile>
       </mat-grid-list>
     </mat-card-content>
