--- a/src/app/dashboard/info-widget/info-widget.component.html
+++ b/src/app/dashboard/info-widget/info-widget.component.html
@@ -4,6 +4,9 @@
     <mat-card-content class="demo-basic-list">
       <mat-grid-list [cols]="2" gutterSize="20px" rowHeight="150px">
         <mat-grid-tile [colspan]="1" [rowspan]="1">
+          <div class="container">
+            <div>{{today}}</div>
+          </div>
         </mat-grid-tile>
         <mat-grid-tile [colspan]="1" [rowspan]="1">
         </mat-grid-tile>
