--- a/src/app/dashboard/cimate-widget/cimate-widget.component.scss
+++ b/src/app/dashboard/cimate-widget/cimate-widget.component.scss
@@ -20,3 +20,10 @@ mat-card-content{
    display: flex;
    flex-direction: column;
  }
+ .icon-button .icon {
+  width: 28px;
+}
+mat-icon{
+  width: 48px;
+  height: 48px;
+}
