--- a/src/app/dashboard/light-widget/light-widget.component.html
+++ b/src/app/dashboard/light-widget/light-widget.component.html
@@ -1,17 +1,17 @@
 <mat-card>
   <mat-card-title>Lights</mat-card-title>
   <mat-card-content class="demo-basic-list">
-    <mat-grid-list [cols]="1" gutterSize="10px" rowHeight="100px">
-      <mat-grid-tile [colspan]="1" [rowspan]="1" >
-
-
-
-
-
+    <mat-grid-list [cols]="2" gutterSize="20px" rowHeight="150px">
+      <mat-grid-tile [colspan]="1" [rowspan]="1">
+        Led 1
       </mat-grid-tile>
-      <mat-grid-tile [colspan]="1" [rowspan]="1" class="mat-elevation-z15">
+      <mat-grid-tile [colspan]="1" [rowspan]="1" class="mat-elevation-z15" (click)="ledtoggle('led1')">
+        Led 2
       </mat-grid-tile>
-      <mat-grid-tile [colspan]="1" [rowspan]="1" class="mat-elevation-z15">
+      <mat-grid-tile [colspan]="1" [rowspan]="1" class="mat-elevation-z15" (click)="ledtoggle('led2')">
+        Led 3
+      </mat-grid-tile>
+      <mat-grid-tile [colspan]="1" [rowspan]="1" class="mat-elevation-z15" (click)="ledtoggle('led3')">
       </mat-grid-tile>
     </mat-grid-list>
   </mat-card-content>
