--- a/src/app/dashboard/misc-widget/misc-widget.component.html
+++ b/src/app/dashboard/misc-widget/misc-widget.component.html
@@ -4,12 +4,25 @@
     <mat-card-content class="demo-basic-list">
       <mat-grid-list [cols]="2" gutterSize="20px" rowHeight="150px">
         <mat-grid-tile [colspan]="1" [rowspan]="1">
+          <div class="container">
+            <div>Fensterkontakt</div>
+            <div>{{window}}</div>
+          </div>
         </mat-grid-tile>
         <mat-grid-tile [colspan]="1" [rowspan]="1">
+          <div class="container">
+            <div>Windgeschwindigkeit</div>
+            <div>{{windspeed}} m/s</div>
+          </div>
         </mat-grid-tile>
         <mat-grid-tile [colspan]="1" [rowspan]="1">
+          <div class="container">
+            <div>Regensensor</div>
+            <div>{{rainsensor}} %</div>
+          </div>
         </mat-grid-tile>
-        <mat-grid-tile [colspan]="1" [rowspan]="1">
+        <mat-grid-tile [colspan]="1" [rowspan]="1" (click)="alarmDialog()">
+          Alarm auslösen
         </mat-grid-tile>
       </mat-grid-list>
     </mat-card-content>
