--- a/src/app/dashboard/stats-widget/stats-widget.component.html
+++ b/src/app/dashboard/stats-widget/stats-widget.component.html
@@ -1,17 +1,19 @@
-
 <mat-card>
-    <mat-card-title>Stats</mat-card-title>
-    <mat-card-content class="demo-basic-list">
-      <mat-grid-list [cols]="2" gutterSize="20px" rowHeight="150px">
-        <mat-grid-tile [colspan]="1" [rowspan]="1">
-          
-        </mat-grid-tile>
-        <mat-grid-tile [colspan]="1" [rowspan]="1">
-        </mat-grid-tile>
-        <mat-grid-tile [colspan]="1" [rowspan]="1">
-        </mat-grid-tile>
-        <mat-grid-tile [colspan]="1" [rowspan]="1">
-        </mat-grid-tile>
-      </mat-grid-list>
-    </mat-card-content>
-  </mat-card>
+  <mat-card-content class="demo-basic-list">
+    <mat-tab-group>
+      <mat-tab label="Energieverbrauch">
+        <highcharts-chart [Highcharts]="Highcharts" [options]="chartOptions"
+        style="width: 100%; height: 333px; display: block;"></highcharts-chart>
+       </mat-tab> 
+      <mat-tab label="Batterie">
+        <highcharts-chart [Highcharts]="Highcharts" [options]="chartOptions"
+        style="width: 100%; height: 333px; display: block;"></highcharts-chart> </mat-tab>
+      <mat-tab label="Temperatur">
+        <highcharts-chart [Highcharts]="Highcharts" [options]="chartOptions"
+        style="width: 100%; height: 333px; display: block;"></highcharts-chart>
+      </mat-tab>
+    </mat-tab-group>
+    
+    
+  </mat-card-content>
+</mat-card>
