added first integrations

--- a/src/app/dashboard/cimate-widget/cimate-widget.component.html
+++ b/src/app/dashboard/cimate-widget/cimate-widget.component.html
@@ -19,7 +19,7 @@
 
         <div class="container">
           <div>Raumtemperatur:</div>
-          <div>{{temperature}} °C</div>
+          <div>{{temperature}} C</div>
         </div>
       </mat-grid-tile>
     </mat-grid-list>
