--- a/src/app/dashboard/cimate-widget/aircondition-dialog/aircondition-dialog.component.html
+++ b/src/app/dashboard/cimate-widget/aircondition-dialog/aircondition-dialog.component.html
@@ -1,29 +1,29 @@
 <div class="containervertical">
     <header>Klimaanlage</header>
-    <mat-button-toggle color="primary" [checked]="autochecked" (change)="autochanged($event)">
+    <mat-button-toggle color="primary" [checked]="autochecked">
         OnOff
     </mat-button-toggle>
     <div class="containerhorizontal">
         <div>Mode</div>
-        <mat-slider min="1" max="7" step="1" showTickMarks discrete [displayWith]="formatLabel" thumbLabel>
-            <input matSliderThumb value="1">
+        <mat-slider min="1" max="7" step="1" showTickMarks discrete [displayWith]="modeLabel" thumbLabel>
+            <input matSliderThumb value="1" [(ngModel)]="data.mode">
         </mat-slider>
     </div>
     <div class="containerhorizontal">
         <div>Temp</div>
-        <mat-slider min="1" max="7" step="1" showTickMarks discrete [displayWith]="formatLabel" thumbLabel>
+        <mat-slider min="16" max="25" step="1" showTickMarks discrete [displayWith]="tempLabel" thumbLabel>
             <input matSliderThumb value="1">
         </mat-slider>
     </div>
     <div class="containerhorizontal">
         <div>Fan</div>
-        <mat-slider min="1" max="7" step="1" showTickMarks discrete [displayWith]="formatLabel" thumbLabel>
+        <mat-slider min="1" max="7" step="1" showTickMarks discrete [displayWith]="fanLabel" thumbLabel>
             <input matSliderThumb value="1">
         </mat-slider>
     </div>
     <div class="containerhorizontal">
         <div>Direction</div>
-        <mat-slider min="1" max="7" step="1" showTickMarks discrete [displayWith]="formatLabel" thumbLabel>
+        <mat-slider min="1" max="7" step="1" showTickMarks discrete [displayWith]="fandirectionLabel" thumbLabel>
             <input matSliderThumb value="1">
         </mat-slider>
     </div>
