--- a/src/app/dashboard/cimate-widget/aeromat-dialog/aeromat-dialog.component.html
+++ b/src/app/dashboard/cimate-widget/aeromat-dialog/aeromat-dialog.component.html
@@ -1,14 +1,12 @@
 <div class="containervertical">
-    <header>Aeromat WRT</header>
-    <mat-slider min="1" max="4" step="1" showTickMarks discrete [displayWith]="formatLabel" thumbLabel>
-        <input matSliderThumb value="1">
-    </mat-slider>
-    <div class="containerhorizontal">
-        <mat-button-toggle color="primary" [checked]="autochecked" (change)="autochanged($event)">
-            Auto
-        </mat-button-toggle>
-        <mat-button-toggle color="accent" [checked]="specialchecked" (change)="specialchanged($event)">
-            Spezial
-        </mat-button-toggle>
-    </div>
+    <header><h2>Aeromat WRT</h2></header>
+    <mat-button-toggle-group name="fontStyle" [(ngModel)]="mode" (ngModelChange)="modechange()" class="buttongroup">
+        <mat-button-toggle value="1">1</mat-button-toggle>
+        <mat-button-toggle value="2">2</mat-button-toggle>
+        <mat-button-toggle value="3">3</mat-button-toggle>
+        <mat-button-toggle value="4">4</mat-button-toggle>
+        <mat-button-toggle value="5">5</mat-button-toggle>
+        <mat-button-toggle value="6">Auto</mat-button-toggle>
+        <mat-button-toggle value="7">Spezial</mat-button-toggle>
+    </mat-button-toggle-group>
 </div>
