--- a/src/app/dashboard/stats-widget/stats-widget.component.scss
+++ b/src/app/dashboard/stats-widget/stats-widget.component.scss
@@ -2,6 +2,8 @@
 mat-card-content{
    text-align: center;
    padding: 10px;
+   display: flex;
+   flex-direction: column;
  }
  mat-grid-tile {
    border-radius: 20px;
