added Mode Counter

--- a/src/app/dashboard/cimate-widget/aircondition-dialog/aircondition-dialog.component.html
+++ b/src/app/dashboard/cimate-widget/aircondition-dialog/aircondition-dialog.component.html
@@ -4,7 +4,9 @@
     <div class="containerhorizontal">
         
         <button mat-mini-fab (click)="deccounter()"><mat-icon>remove</mat-icon></button>
-        <h1>{{targettemp}}</h1>
+        <div class="counter">
+            <h1>{{targettemp}}</h1>
+        </div>
         <button mat-mini-fab (click)="inccounter()"><mat-icon>add</mat-icon></button>
     </div>
     <mat-button-toggle-group name="fontStyle" [(ngModel)]="mode" (ngModelChange)="modechange()">
